--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
+  "name": "ini",
+  "version": "1.0.0",
+  "description": "A WebSocket and Express app",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.21.2",
     "ws": "^8.18.0"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
