--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "main": "server.js",
+  "name": "translete",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.21.2",
